--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ header {
 
 
 .banner {
-    background-image: url('./images/IMG_7577.jpeg');
+    background-image: url('./IMG_7577.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;  
